feat: config login 90%

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.driver.class-name=oracle.jdbc.OracleDriver
 spring.JPA.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 spring.jpa.show_sql=true
 
+api.security.token.secret=${JWT_SECRET:my-secret}
